# inzynieria_oprogramowania

./: .dockerignore  .env.dev  .env.example  .env.production.template  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  PRODUCTION_DEPLOY.md  QUICKSTART.md  README.md  START_HERE.md  TESTING_GUIDE.md  TESTING_TRAVERSAL.md  build.sh  check_build.sh  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  setup_and_build.sh  test_api.sh  test_auth.sh  test_ci_cd.sh  test_quick.sh
.github/: issues.yml
.github/workflows/: ci-cd.yml
docs/: API_SECURITY.md  ARCHITECTURE_WITH_DB.md  AUTHENTICATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  SCENARIOS_IMPLEMENTATION.md  WEBSOCKET_API.md  api.md  architecture.md  auth_flow.puml  cicd_pipeline.puml  database_schema.puml  docker_deployment.puml  generate_diagrams.sh  hybrid_architecture.puml  load_topology_sequence.puml  production_deployment.puml  save_topology_sequence.puml  scenario_system.puml  system_overview.puml  testing.md  validate_diagrams.sh  websocket_flow.puml
monitoring/: alertmanager.yml  alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: dashboard.yml
nginx/: Dockerfile  nginx.conf  nginx.dev.conf
project/: Poradnik_dla_dwoch_osob.md  README.md  package-lock.json
project/.cache/clangd/index/: Engine.cpp.138B344D547C6920.idx  Engine.hpp.98FCD43403BD5032.idx  Host.cpp.D19DF2487CCF4DCC.idx  Host.hpp.46F1D1E604013F4A.idx  JsonAdapter.hpp.EB53D16A6A85D318.idx  Network.cpp.747003BF0F115070.idx  Network.hpp.D5D25A724C8F1E77.idx  Node.cpp.9C673A5904F8EF33.idx  Node.hpp.73C50CAE44A77135.idx  Packet.cpp.837720FD0ABFD7E1.idx  Packet.hpp.3244F4938E2FD7BD.idx  Router.cpp.928E148A3B0596EA.idx  Router.hpp.97445C1A55F5D739.idx  main.cpp.91B2AB8ABD56C9BE.idx  test_main.cpp.B208D4BD776A636F.idx
project/backend/: BUILD_SIMPLE_TEST.md  CMakeLists.txt  TEST_API_EXAMPLES.md  test_traversal_api.sh  test_websocket.html
project/backend/scenarios/: README.md
project/backend/scenarios/examples/: basic_ping.yaml  vlan_isolation.yaml
project/backend/src/: main.cpp  performance_tests.cpp  simple_traversal_test.cpp  test_main.cpp  test_traversal_api.cpp
project/backend/src/auth/: AuthService.hpp  JWTManager.hpp  PasswordHasher.hpp  RedisClient.hpp
project/backend/src/core/: Engine.cpp  Engine.hpp  Host.cpp  Host.hpp  Network.cpp  Network.hpp  Node.cpp  Node.hpp  Packet.cpp  Packet.hpp  Router.cpp  Router.hpp  TraversalAlgorithms.cpp  TraversalAlgorithms.hpp
project/backend/src/database/: Config.hpp  DatabaseManager.hpp  LinkRepository.hpp  NodeRepository.hpp  StatsRepository.hpp
project/backend/src/fuzzing/: ScenarioFuzzer.cpp  ScenarioFuzzer.hpp
project/backend/src/scenario/: ScenarioRunner.cpp  ScenarioRunner.hpp  ScenarioTypes.cpp  ScenarioTypes.hpp
project/backend/src/utils/: JsonAdapter.hpp
project/backend/src/websocket/: EventBroadcaster.hpp  WebSocketServer.hpp
project/database/: .env  .env.example  .gitignore  AuthSchema.sql  NetSimDB.sql  README.md  README_NetSim_Database.md  docker-compose.yml
project/docs/: diagrams.md  overview.md
project/docs/UML/: README.md
project/frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
project/frontend/src/: App.tsx  index.css  tailwind.config.ts
project/frontend/src/api/: auth.ts  client.ts  index.ts  topology.ts
project/frontend/src/components/: index.ts
project/frontend/src/components/Sidebar/: Siderbar.css
project/frontend/src/components/auth/AuthForm/: AuthForm.styled.ts  AuthForm.tsx
project/frontend/src/components/auth/AuthLayout/: AuthLayout.styled.ts  AuthLayout.tsx
project/frontend/src/components/common/LinkConfigModal/: LinkConfigModal.tsx
project/frontend/src/components/common/Modal/: Modal.styled.tsx  Modal.tsx
project/frontend/src/components/common/ProtectedRoute/: ProtectedRoute.tsx
project/frontend/src/components/editor/CanvasArea/: CanvasArea.tsx
project/frontend/src/components/editor/ContextDeviceMenu/: ContextDeviceMenu.tsx
project/frontend/src/components/editor/ContextGroupMenu/: ContextGroupMenu.tsx
project/frontend/src/components/editor/DeviceDetailsPanel/: DeviceDetailsPanel.tsx
project/frontend/src/components/editor/DeviceNode/: DeviceNode.styled.ts  (+1 more)
project/frontend/src/context/: AuthContext.tsx  ContextualMenuContext.tsx  EditorContext.tsx  ModalContext.tsx  NetworkContext.tsx  WorkspaceModeContext.tsx
project/frontend/src/data/: index.ts
project/frontend/src/hooks/: index.ts
project/frontend/src/hooks/useAuth/: useAuth.test.ts  useAuth.ts
project/frontend/src/hooks/useAuthQuery/: useAuthQuery.test.tsx  useAuthQuery.ts
project/frontend/src/hooks/useFetch/: useFetch.test.ts  useFetch.ts
project/frontend/src/hooks/useKeyboardShortcuts/: useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts
project/frontend/src/hooks/useLoginMutation/: useLoginMutation.test.tsx  useLoginMutation.ts
project/frontend/src/hooks/useMutation/: useMutation.test.ts  useMutation.ts
project/frontend/src/hooks/useNetworkAction/: useNetworkAction.ts
project/frontend/src/hooks/useRegisterMutation/: useRegisterMutation.ts
project/frontend/src/hooks/useWebSocket/: useWebSocket.test.ts  useWebSocket.ts
project/frontend/src/pages/: index.ts
project/frontend/src/pages/Authorization/: Authorization.test.tsx  Authorization.tsx
project/frontend/src/pages/Workspace/: Workspace.styled.ts  Workspace.test.tsx  Workspace.tsx
project/frontend/src/styles/: GlobalStyle.ts  index.ts  theme.ts
project/frontend/src/types/: Devices.ts  Groups.ts  Links.ts  index.ts
project/frontend/src/utils/: exportTopology.ts  importTopology.ts  index.ts
project/frontend/src/utils/exportTopology/: exportTopology.test.ts
project/frontend/src/utils/importTopology/: importTopology.test.ts
project/frontend/src/utils/mapDeviceToApiConfig/: mapDeviceToApiConfig.ts
scripts/: generate_secrets.sh  import_issues.sh  install_auth_deps.sh  install_deps.sh  test_database.sh  test_docker.sh  test_node_config.sh  test_websocket.sh
user_journey/: journey_en.md  journey_pl.md
(+33 files in other folders)
